# python-ioctl

./: .pre-commit-config.yaml  README.md  setup.cfg
examples/: print-hidraw.py
ioctl/: __init__.py  hidraw.py
