[metadata]
name = ioctl
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@archlinux.org
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
url = https://github.com/FFY00/python-ioctl

[options]
packages = find:
python_requires = >=3.6, <4
